--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "needle": "^2.9.1",
+    "sentiment": "^5.0.2",
     "socket.io": "^3.1.2"
   },
   "devDependencies": {
