--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "natural": "^5.1.1",
     "needle": "^2.9.1",
     "sentiment": "^5.0.2",
     "socket.io": "^3.1.2"
